axum-macros/tests/debug_handler/fail/invalid_attrs_with_multiple_types_in_group.rs
use axum_macros::debug_handler;

#[debug_handler(with(T = String, U = u64))]
async fn handler() {}

fn main() {}
